# esp32-pcm5102-bt-player

./: .gitignore  CMakeLists.txt  README.md  flash_file.sh  sdkconfig.defaults  sdkconfig.old
components/ssd1306/: CMakeLists.txt
main/: CMakeLists.txt  bt_app_av.c  bt_app_av.h  bt_app_core.c  bt_app_core.h  idf_component.yml  main.c  ssd_ui.c  ssd_ui.h
